# bookcrypt

./: CLAUDE.md  dracula.epub  pyproject.toml
.claude/: settings.json
.claude/commands/: lint.md  test.md  typecheck.md
bookcrypt/: __init__.py  cli.py  encoder.py  indexer.py  parser.py
bookcrypt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_encoder.py  test_indexer.py  test_parser.py
